syntax = "proto3";
package com.snapchat.auth.proto;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCAuth";
option csharp_namespace = "SnapProto.Com.Snapchat.Auth.Proto";

message SCAuthUserSessionValidationRequest {
    string refreshToken = 1;
}